--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bootstrap": "3.3.7",
     "core-js": "^2.4.1",
+    "crypto-browserify": "^3.10.0",
     "hoek": "^5.0.3",
     "rxjs": "^5.5.6",
+    "text-encoding-shim": "^1.0.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
